# Python3

./: README.md
1. BandWidthGenerator/: app.py
2. TipCalculator/: app.py
3. Treasure Island/: 1. evenOrOdd.py  2. bmiCalculator.py  3. leapYear.py  4. loveCalculator.py  app.py
4. Rock Paper Scissors/: RockPaperScissors.py
5. Chess/: app.js  index.html  movement.js  style.css
Assignments/Assignment1/: q10.calculateCos_x.py  q5.printNto(-N).py  q6.sumOfSeries1.py  q7.sumOfSeries2.py  q8.sumOfSeries3.py  q9.calculateSin_x.py
Automating Boring Things With/: code.cpp
Automating Boring Things With/File Manager/: manage.py
Automating Boring Things With/WahtsApp/: PyWhatKit_DB.txt  wahtsapp_pyautogui.py  whatsappPrank.py  whatsapp_selenium.py
BlockChain Dev/Asgardian/: pyproject.toml
BlockChain Dev/Asgardian/tests/: test_asgardian.py
BlockChain Dev/blockchain/: pyproject.toml
BlockChain Dev/chatApplication/: pyproject.toml
BlockChain Dev/funcoin/: pyproject.toml
BlockChain Dev/my_project/: pyproject.toml
Hangman/: .wordlist.txt.swp  hangman.py  wordlist.txt
Pygame Tutorial/: fundamentals.py
Revision/: calculator.py  dict.py  fun.py  input.py  list.py  variables.py
Revision/Loop/: print_n_numbers.py
Revision/Projects/: guessTheNumber.py  lorem.py  visitRooms.py
Todo/: db.sqlite3
mysite/: db.sqlite3
passwordManager/: pyproject.toml
passwordManager/db/: schema.py
passwordManager/encryption/: passwordValidation.py
pyrebase_auth/: auth.py  config.py
turtle/: doraemon.py  pikachu.py
tutorials/: binary.py  bst.cpp
(+55 files in other folders)
