[tool.poetry]
name = "passwordmanager"
version = "0.1.0"
description = "Simple password manager 1.0"
authors = ["sagarmohanty2k00 <sagarmohanty2k00@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
