[tool.poetry]
name = "Asgardian"
version = "0.1.0"
description = ""
authors = ["sagarmohanty2k00 <sagarmohanty2k00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyNaCl = "^1.5.0"
structlog = "^21.5.0"
colorama = "^0.4.4"
marshmallow = "^3.14.1"
marshmallow-oneofschema = "^3.0.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
